Implement APIWeather and NetworkService with unit tests

--- a/WeatherApp/Secrets.plist
+++ b/WeatherApp/Secrets.plist
@@ -2,13 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>SchemeUserState</key>
-	<dict>
-		<key>WeatherApp.xcscheme_^#shared#^_</key>
-		<dict>
-			<key>orderHint</key>
-			<integer>4</integer>
-		</dict>
-	</dict>
+	<key>apiKey</key>
+	<string>de5553176da64306b86153651221606</string>
+	<key>baseURL</key>
+	<string>https://api.weatherapi.com</string>
 </dict>
 </plist>
